# interviewQ1

./: README.md  fc.cabal  stack.yaml  tdriver.sh
src/: Main.hs  NodeOps.hs  NodeType.hs  Tree.hs  Util.hs
tests/control/: tree1  tree1_PERSON  tree2  tree2_PERSON
tests/trees/: tree2.csv
